# pcz-ppo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile.train  LICENSE  README.md  docker-compose.mlflow.yml  docker-compose.train.yml  pyproject.toml
.github/workflows/: ci.yml  paper-claims.yml
core/: __init__.py  compare.py  env_config.py  mlflow_utils.py  parser.py  train.py
core/algorithms/: __init__.py  _common.py
core/envs/: __init__.py  trading.py
core/market_data/: __init__.py  __main__.py  binance.py  cli.py  process.py  schema.py
core/plot/: __init__.py  component_correlation.py  diagnostics.py  export_metrics.py  export_results.py  iqm_analysis.py  plot.py
core/torchrl/: __init__.py  __main__.py  checkpoint.py  config.py  config_defaults.json  config_gate.py  env.py  models.py  render.py  training.py
data/: results.csv
data/metrics/: 0014d0fef55c_torchrl-ppo_trading-hk6_s42.parquet  006f88c30b2c_torchrl-pcz-ppo-running_lunarlander-k6_s50.parquet  00be61f55d3d_torchrl-pcz-ppo-running_trading-hk2_s43.parquet  00f8a394161d_torchrl-ppo_lunarlander_s43.parquet  00fe8f49104f_torchrl-pcz-ppo-symznorm_lunarlander_s43.parquet  012e1aea4473_torchrl-pcz-ppo-running_lunarlander_s48.parquet  019b47a12b3b_torchrl-pcz-ppo-mc_trading-k4_s44.parquet  01bc5d8e26b2_torchrl-pcz-ppo-running_trading-k4_s42.parquet  01bee84119a1_torchrl-ppo_trading-k4_s43.parquet  02007cad09ef_torchrl-pcz-ppo-running_humanoid_s43.parquet  0222ef01aff0_torchrl-pcz-ppo-symznorm_lunarlander-k2_s43.parquet  022fdca341fd_torchrl-ppo_trading-k2_s42.parquet  0308261e5371_torchrl-ppo_trading-k6_s44.parquet  (+1167 more)
docs/: REPRODUCE.md  algorithms.md  architecture.md  environment-api.md  torchrl.md
paper/: BUILD.md  FIGURE_INTEGRITY.md  LICENSE  fig_ablation_bar.py  fig_alignment_results.py  fig_cross_env.py  fig_data.py  fig_entropy_sweep.py  fig_hp_fairness.py  fig_hp_peak.py  fig_kscaling.py  fig_learning_curves_4M.py  fig_sample_efficiency.py  fig_trading.py  fig_weight_sensitivity.py  lint_caption_claims.py  lint_caption_drift.py  lint_figure_geometry.py  lint_figure_units.py  lint_hardcoded_numbers.py  lint_winner_coverage.py  paper_build.lock.json  paper_build.py  pcz_ppo.out  pcz_ppo.tex  references.bib  render_claims.py
scripts/: canonical_policy_smoke.py
tools/: lint_manifest.py
(+182 files in other folders)
