[project]
name = "rl-mo-reward"
version = "0.1.0"
description = "17 reward normalization strategies for PPO, built on Stable Baselines 3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]>=1.0",
    "mo-gymnasium>=1.0",
    "stable-baselines3[extra]>=2.7",
    "torch>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.5",
    "pandas>=1.5",
    "mlflow>=2.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
mario = [
    "gym-super-mario-bros>=7.4.0",
    "numpy<2.0",
]
torchrl = [
    "torchrl>=0.4",
    "tensordict>=0.4",
]
llm = [
    "trl>=1.0",
    "transformers>=4.40",
    "peft>=0.10",
    "accelerate>=0.30",
    "datasets>=2.0",
    "bitsandbytes>=0.43",
]
trading = [
    "gym-trading-env>=0.3",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "F",     # pyflakes — unused imports, undefined names
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort — import sorting
    "UP",    # pyupgrade — modernize syntax for target Python version
    "B",     # flake8-bugbear — common bugs and design problems
    "SIM",   # flake8-simplify — simplifiable code
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",   # line too long — formatter handles this
    "E402",   # module-import-not-at-top — needed for conditional imports (torch, torchrl)
    "B905",   # zip-without-explicit-strict — too noisy for research code
    "SIM108", # ternary operator — readability preference
    "SIM102", # nested if — sometimes clearer than combined conditions
    "SIM105", # contextlib.suppress — try/except/pass is clearer for optional imports
    "RUF001", # ambiguous Unicode in strings — legitimate (×, –)
    "RUF002", # ambiguous Unicode in docstrings
    "RUF003", # ambiguous Unicode in comments
    "RUF012", # mutable class default — acceptable for metadata dicts
    "RUF013", # implicit Optional — too noisy, modernize gradually
    "RUF022", # __all__ not sorted — we prefer logical grouping over alphabetical
]

[tool.ruff.lint.isort]
known-first-party = ["core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
package = false

[tool.uv.sources]
